--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,12 @@
         {% endblock %}
     </head>
     <body>
+        <nav>
+            <ul>
+                <li><a href="{{ path('app_entreprise')}}">Liste des entreprises</a></li> <!-- c'est le name indiqué dans les routes qu'il faut utiliser ! (et pas le chemin)-->
+                <li><a href="{{ path('app_employe')}}">Liste des employés</a></li>
+            </ul>
+        </nav>
         {% block body %}{% endblock %}
     </body>
 </html>
