--- a/templates/entreprise/show.html.twig
+++ b/templates/entreprise/show.html.twig
@@ -5,5 +5,9 @@
 {% block body %}
     <h1>Détail d'une entreprise</h1>
     
+    <h2>{{ entreprise }}</h2>
+    <p>
+        Adresse :    {{ entreprise.adresse }} {{ entreprise.cp }} {{ entreprise.ville }}
+    </p>
    
 {% endblock %}
