--- a/templates/entreprise/show.html.twig
+++ b/templates/entreprise/show.html.twig
@@ -7,7 +7,7 @@
     
     <h2>{{ entreprise }}</h2>
     <p>
-        Adresse :    {{ entreprise.adresse }} {{ entreprise.cp }} {{ entreprise.ville }}
+        Adresse :    {{ entreprise.adresseComplete }}
     </p>
    
 {% endblock %}
