--- a/templates/entreprise/show.html.twig
+++ b/templates/entreprise/show.html.twig
@@ -8,6 +8,7 @@
     <h2>{{ entreprise }}</h2>
     <p>
         Adresse :    {{ entreprise.adresseComplete }}
+        Date de création : {{ entreprise.dateCreation }}
     </p>
    
 {% endblock %}
