--- a/templates/entreprise/index.html.twig
+++ b/templates/entreprise/index.html.twig
@@ -6,7 +6,7 @@
     <h1>Liste des entreprises</h1>
     
     
-    {% for entreprise in entreprises %}
+    {% for entreprise in entreprises %}     <!--On récupère en dessous l'id par entreprise.id que l'on donne en paramètre pour 'id', qui est l'"id" qu'on a spécifié en paramètre de la route de la méthode -->
         <a href="{{ path('show_entreprise', {'id': entreprise.id}) }}">{{ entreprise ~ ' (' ~ entreprise.cp ~ ' ' ~ entreprise.ville ~ ')' }}</a><br> <!-- objet.attribut pour afficher l'attribut correspondant de l'objet, twig fait automatiquement appel au getter correspondant -->
     {% endfor %} <!-- Ici je peux directement placer l'objet entreprise car j'ai créé un __toString() qui renvoie la raison sociale -->
 
