--- a/templates/entreprise/show.html.twig
+++ b/templates/entreprise/show.html.twig
@@ -7,8 +7,8 @@
     
     <h2>{{ entreprise }}</h2>
     <p>
-        Adresse :    {{ entreprise.adresseComplete }}
-        Date de création : {{ entreprise.dateCreation }}
+        Adresse :    {{ entreprise.adresseComplete }}<br>
+        Date de création : {{ entreprise.dateCreationFr }}
     </p>
    
 {% endblock %}
