--- a/templates/entreprise/show.html.twig
+++ b/templates/entreprise/show.html.twig
@@ -8,7 +8,8 @@
     <h2>{{ entreprise }}</h2>
     <p>
         Adresse :    {{ entreprise.adresseComplete }}<br>
-        Date de création : {{ entreprise.dateCreationFr }}
+        {# Date de création : {{ entreprise.dateCreationFr }} #}
+        Date de création : {{ entreprise.dateCreation | date("d-mp-Y") }} <!-- On se sert ici d'un filtre de twig pour convertir dateCreation (obj datetime) en string -->
     </p>
    
 {% endblock %}
