finished displaying details for an entreprise and an employe

--- a/templates/entreprise/show.html.twig
+++ b/templates/entreprise/show.html.twig
@@ -11,5 +11,16 @@
         {# Date de création : {{ entreprise.dateCreationFr }} #}
         Date de création : {{ entreprise.dateCreation | date("d.m.Y") }} <!-- On se sert ici d'un filtre de twig pour convertir dateCreation (obj datetime) en string -->
     </p>
+
+    <h3>Liste des salariés</h3>
+
+    {% if entreprise.employes | length > 0 %}
+        {% for employe in entreprise.employes %} <!--j'affiche les employés de la collection d'employé de l'entreprise-->
+            <a href="{{ path('show_employe', {'id': employe.id}) }}">{{ employe }}</a><br>           <!-- doctrine permet de ne pas avoir à ajouter de requête spécifique comme on avait du faire sur le mvc maison (grâce à doctrine)-->
+        {% endfor %}
+    {% else %}
+        <p>Aucun salarié dans cette entreprise.</p>
+    {% endif %}
+
    
 {% endblock %}
