--- a/templates/employe/show.html.twig
+++ b/templates/employe/show.html.twig
@@ -6,9 +6,9 @@
     <h1>Détail d'une employe</h1>
     
     <h2>{{ employe }}</h2>
-    <p>                                     <!--Attention ci dessous il faut bien passer par employe poru récupérer l'id de l'entreprise, si on utilise seulement entreprise.id, il nous dira qu'il ne connaît pas entreprise (cf. les data qu'on envoie depuis EmployeController, puisqu'on est actuellement sur la page renvoyée par cette méthode)-->
+    <p>                                     <!--Attention ci dessous il faut bien passer par employe poru récupérer l'id de l'entreprise, si on utilise seulement entreprise.id, il nous dira qu'il ne connaît pas entreprise (cf. les data qu'on envoie depuis EmployeController, puisqu'on est actuellement sur la page renvoyée par cette méthode. On récupère l'id d'entreprise par chainage-->
         Entreprise <a href="{{ path('show_entreprise', {'id':employe.entreprise.id }) }}">{{ employe.entreprise }}</a><br>
-        Ville :    {{ employe.ville }}<br>
+        Ville :   {% if employe.ville %} {{ employe.ville }} {% else %} Ville non renseignée {% endif %} <br>
         {# Date de création : {{ entreprise.dateCreationFr }} #}
         Date de naissance : {{ employe.dateNaissance | date("d.m.Y") }}<br> <!-- On se sert ici d'un filtre de twig pour convertir dateCreation (obj datetime) en string -->
         Date d'embauche : {{ employe.dateEmbauche | date("d.m.Y") }} 
