--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,22 +9,24 @@
         <link rel="stylesheet" href="{{ asset('css/style.css')}}"> <!--la fct asset fait appel directement au dossier public-->
         {% endblock %}
 
-        {% block javascripts %}
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-        <script src="{{ asset('js/script.js')}}"></script>
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
     </head>
     <body>
         <nav>
             <ul>
                 <li><a href="{{ path('app_entreprise')}}">Liste des entreprises</a></li> <!-- c'est le name indiqué dans les routes qu'il faut utiliser ! (et pas le chemin)-->
                 <li><a href="{{ path('app_employe')}}">Liste des employés</a></li>
+                <li><a href="{{ path('new_entreprise')}}">Ajouter une entreprise</a></li>
             </ul>
         </nav>
         <main class="container">
             {% block body %}{% endblock %}
-
+            
         </main>
+
+        {% block javascripts %}
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script src="{{ asset('js/script.js')}}"></script>
+            {% block importmap %}{{ importmap('app') }}{% endblock %}
+        {% endblock %}
     </body>
 </html>
