--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,6 +16,7 @@
                 <li><a href="{{ path('app_entreprise')}}">Liste des entreprises</a></li> <!-- c'est le name indiqué dans les routes qu'il faut utiliser ! (et pas le chemin)-->
                 <li><a href="{{ path('app_employe')}}">Liste des employés</a></li>
                 <li><a href="{{ path('new_entreprise')}}">Ajouter une entreprise</a></li>
+                <li><a href="{{ path('new_employe')}}">Ajouter une employé</a></li>
             </ul>
         </nav>
         <main class="container">
