--- a/templates/employe/new.html.twig
+++ b/templates/employe/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Ajouter une employe{% endblock %}
 
 {% block body %}
-    <h1>Ajouter une employe</h1>
+    <h1>Ajouter un employe</h1>
     
     {{ form(formAddEmploye) }} <!-- On récupère les données envoyées par le EntrepriseController (fonction new())-->
 
